manifests/develop/argocd/Gateway-argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: argocd.k8s.misumi-sumi.com
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: misumi-sumi-com-tls
        mode: Terminate
